--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -26,13 +26,14 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: var(--site-color--color);
 
   font-size: var(--text-font-size);
   line-height: var(--text-line-height);
+  font-weight: 500;
 
   background-color: var(--site-color--background);
 }
@@ -42,7 +43,7 @@ h1 {
   line-height:    calc(var(--text-line-height) * 3);
   margin-top:     calc(var(--text-line-height) * 2);
   margin-bottom:  calc(var(--text-line-height) * 1);
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: -.05em;
 }
 
@@ -51,7 +52,7 @@ h2 {
   line-height:    calc(var(--text-line-height) * 2);
   margin-top:     calc(var(--text-line-height) * 2);
   margin-bottom:  calc(var(--text-line-height) * 1);
-  font-weight:    bold;
+  font-weight: 500;
   letter-spacing: -.05em;
 }
 
@@ -60,13 +61,18 @@ h3 {
   line-height:    calc(var(--text-line-height) * 1);
   margin-top:     calc(var(--text-line-height) * 0);
   margin-bottom:  calc(var(--text-line-height) * 0);
-  font-weight:    bold;
+  font-weight: 500;
   letter-spacing: -.025em;
+}
+
+h4, h5, h6 {
+  font-weight: 500;
 }
 
 p {
   margin-top:     calc(var(--text-line-height) * 0);
   margin-bottom:  calc(var(--text-line-height) * 1);
+  font-weight: 500;
 }
 
 button {
