--- a/src/style/grid.scss
+++ b/src/style/grid.scss
@@ -3,6 +3,15 @@
   width: 100%;
   flex-direction: row;
   align-items: center;
+
+  &.mmd-box--coll {
+    flex-direction: column;
+  }
+
+  &.mmd-box--to-end {
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
 }
 
 .mmd--with-gutter {
