--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -1,5 +1,5 @@
 .mmd-font-xxl {
-  font-size:      calc(var(--text-font-size)   * 8);
+  font-size:      var(--font-xxl__font-size);
   line-height:    var(--font-xxl__line-height);
   font-weight: 500;
   letter-spacing: -.025em;
