--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -2,7 +2,7 @@
 @import "grid";
 
 :root {
-  --unit: 18px;
+  --unit: 12px;
   --text-font-size:   calc( var(--unit) / 0.65 );
   --text-line-height: calc(var(--unit)  * 2);
 
@@ -36,6 +36,14 @@
 
   @media all and (min-width: 800px){
     --video-size: 33.33333vw;
+  }
+
+  @media all and (min-width: 920px){
+    --unit: 15px;
+  }
+
+  @media all and (min-width: 1100px){
+    --unit: 18px;
   }
 
   @media all and (min-width: 1200px){
