feat: design and content

--- a/src/style/grid.scss
+++ b/src/style/grid.scss
@@ -30,10 +30,10 @@
 }
 
 .mmd--child-rm-margin {
-  *:first-child {
+  >*:first-child {
     margin-top: 0;
   }
-  *:last-child {
+  >*:last-child {
     margin-bottom: 0;
   }
 }
