--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -34,16 +34,20 @@
 
   --video-size: 50vw;
 
+  --profile-width: 420px;
+
   @media all and (min-width: 800px){
     --video-size: 33.33333vw;
   }
 
   @media all and (min-width: 920px){
     --unit: 15px;
+    --profile-width: 530px;
   }
 
   @media all and (min-width: 1100px){
     --unit: 18px;
+    --profile-width: 670px;
   }
 
   @media all and (min-width: 1200px){
@@ -52,6 +56,7 @@
 
   @media all and (min-width: 1400px) {
     --unit: 20px;
+    --profile-width: 720px;
 
     --font-xxl__font-size:    calc(var(--text-font-size)   * 9);
     --font-xxl__line-height:  calc(var(--text-line-height) * 6);
