--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -43,10 +43,12 @@ p {
   font-weight: 500;
 }
 
-a {
+a,
+.mmd-link {
   color: inherit;
   text-decoration: none;
   border-bottom: solid var(--border-width);
+  cursor: pointer;
 }
 
 .font--small {
